--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -137,7 +137,7 @@ body {
     height: 13px;
     width: 13px;
 }
-.playlistt {
+.playlist {
     background-color: #333333;
     border-radius: 5px 5px 5px 5px;
     list-style-type: none;
