--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -148,6 +148,7 @@ body {
     width: 326px;
     z-index: 1;
 }
+
 .playlist li {
     color: #EEEEEE;
     cursor: pointer;
@@ -155,4 +156,11 @@ body {
 }
 .playlist li.active {
     font-weight: bold;
+    color: red;
+}
+
+#list {
+    color: #c0c0c0;
+    cursor: pointer;
+    margin: 0 0 10px 10px;
 }
